  (Dmitry)
- Improved ext/openssl: (Dmitry)
  . Added support for OpenSSL digest functions
  . Added support for OpenSSL cipher functions
  . Added access to internal values of DSA, RSA and DH keys
- Improved memory usage by moving constants to read only memory.
  (Dmitry, Pierre)

- Fixed possible crash in ext/soap because of uninitialized value. (Zdash Urf)

- Fixed bug #43136 (possible crash on script execution timeout.
  The EG(function_state_ptr) is completely removed,
  EG(current_execute_data)->function_state must be used instead). (Dmitry)
- Fixed bug #43128 (Very long class name causes segfault). (Dmitry)
- Fixed bug #42952 (soap cache file is created with insecure permissions).
  (Dmitry)
- Fixed bug #42848 (Status: header incorrect under FastCGI). (Dmitry)
- Fixed bug #42773 (WSDL error causes HTTP 500 Response). (Dmitry)
- Fixed bug #42737 (preg_split('//u') triggers a E_NOTICE with newlines). (Nuno)
- Fixed bug #42736 (xmlrpc_server_call_method() crashes). (Tony)
- Fixed bug #42657 (ini_get() returns incorrect value when default is NULL).
  (Jani)
- Fixed bug #42637 (SoapFault : Only http and https are allowed). (Bill Moran)
- Fixed bug #42509 (gmp leaks memory when gmp_init() not used). (Stas)
- Fixed bug #42284 (duplicate of #39700). (Lars W)
- Fixed bug #42069 (parse_ini_file() allows using some non-alpha numeric
  characters). (Jani)
- Fixed bug #41522 (PDO firebird driver returns null if it fails to connect). 
  (Lars W)
- Fixed bug #39822 (new PDO() doesn't work with firebird). (Lars W)
- Fixed bug #39700 (NUMERIC error when result precision are 7,8 or 12-14 ). 
  (Lars W)
- Fixed bug #39397 (invalid statement handle in Unknown on line 0). (Lars W)
- Fixed bug #39056 (Interbase NUMERIC data type error). (Lars W)
- Fixed bug #37911 (preg_replace_callback() ignores named groups). (Nuno)
- Fixed bug #36128 (Interbase PDO - timestamp columns return NULL). (Lars W)
- Fixed bug #35386 (firebird: first row is null). (Lars W)